<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">    XS1\nSmartHome</string>
    <string name="ip_in">IP oder Adresse eingeben</string>
    <string name="pw">Passwort (optional)</string>
    <string name="ok">ok...</string>
    <string name="xsconf">XS1 Verbindung konfigurieren!</string>
    <string name="in_user">Benutzername (optional)</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="type">Typ</string>
    <string name="new_act">neuer Aktuator</string>
    <string name="new_sens">Neuer Sensor</string>
    <string name="system">System</string>
    <string name="anfangsval">Anfangswert</string>
    <string name="faktor">Faktor</string>
    <string name="offset">Offset</string>
    <string name="name">Name</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="hc1">HC1</string>
    <string name="address">Adresse</string>
    <string name="func1">Funktion 1</string>
    <string name="func2">Funktion 2</string>
    <string name="func3">Funktion 3</string>
    <string name="func4">Funktion 4</string>
    <string name="newTimer">Neuer Timer</string>
    <string name="mo">Mo</string>
    <string name="di">Di</string>
    <string name="mi">Mi</string>
    <string name="don">Do</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="so">So</string>
    <string name="time">Zeit</string>
    <string name="offs">Offset</string>
    <string name="act">Aktuator</string>
    <string name="function">Funktion</string>
    <string name="element">Element</string>
    <string name="neuer_skript">Neuer Skript</string>
    <string name="remove">Element entfernen</string>
    <string name="hc2">HC2</string>
    <string name="element_waehlen">bitte zu löschendes Element wählen</string>
    <string name="Zeit">Zeit (Sek)</string>
    <string name="wert">Wert</string>
    <string name="tag_seekbar">10</string>
    <string name="tag_spin">11</string>
    <string name="laden">Laden...</string>
    <string name="obj_name">obj_name</string>
    <string name="version">2.03.001_BETA</string>
    <string name="std_user">admin</string>
</resources>
